Fixed tab text spacing issue

--- a/src/styles/MasterPage.module.less
+++ b/src/styles/MasterPage.module.less
@@ -32,10 +32,6 @@
   margin-right: 1rem;
 }
 
-p {
-  line-height: 6.25em;
-}
-
 .MasterContent {
   flex-direction: column;
   display: flex;
